# up-subscription-rust_fork

./: Cargo.toml  README.md
up-subscription/: Cargo.toml
up-subscription-plugin/: Cargo.toml
up-subscription-plugin/src/: main.rs  utils.rs
up-subscription/src/: lib.rs  notification_manager.rs  subscription_manager.rs  usubscription.rs  usubscription_manager.rs  usubscription_notification.rs  usubscription_uris.rs
up-subscription/src/common/: helpers.rs  mod.rs
up-subscription/src/listeners/: fetch_subscribers.rs  fetch_subscriptions.rs  register_for_notifications.rs  subscribe.rs  unregister_for_notifications.rs  unsubscribe.rs
up-subscription/src/tests/: mod.rs  notification_manager_tests.rs  subscription_manager_tests.rs  test_lib.rs  usubscription_tests.rs
up_client_socket/rust/: Cargo.toml
up_client_socket/rust/src/: lib.rs
up_client_socket/rust/utransport-socket/: Cargo.toml
up_client_socket/rust/utransport-socket/src/: lib.rs
